# netbox

./: .gitignore  CONTRIBUTING.md  README.md  UV_USAGE.md  base_requirements.txt  docker-compose.dev.yml  mkdocs.yml  netbox_models_diagram.html  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: 01-feature_request.yaml  02-bug_report.yaml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml
docs/: extra.css
docs/configuration/: system.md
docs/development/: getting-started.md  release-checklist.md
docs/installation/: 3-netbox.md  upgrading.md
docs/models/extras/: configtemplate.md  exporttemplate.md
docs/plugins/development/: background-jobs.md
docs/release-notes/: version-4.3.md
netbox/: release.yaml
netbox/appm/: README.md  apps.py  choices.py  config.py  filtersets.py  forms.py  search.py  signals.py  tables.py  urls.py  utils.py  views.py
netbox/appm/api/: serializers.py  urls.py  views.py
netbox/appm/migrations/: 0001_initial.py  0002_add_comments_to_applicationgroup.py  0003_fix_applicationgroup_mptt.py  0004_add_applicationgroup_constraints.py
netbox/appm/models/: __init__.py  applications.py  endpoints.py  personnel.py  servers.py
netbox/appm/tests/: test_api.py  test_filtersets.py  test_forms.py  test_models.py  test_ordering.py  test_views.py
netbox/circuits/: views.py
netbox/core/: jobs.py  signals.py  views.py
netbox/core/api/: views.py
netbox/core/models/: jobs.py
netbox/core/tests/: test_changelog.py
netbox/dcim/: constants.py  filtersets.py  signals.py  utils.py  views.py
netbox/dcim/forms/: bulk_import.py
netbox/dcim/graphql/: types.py
netbox/dcim/models/: cables.py  device_components.py  devices.py  modules.py
netbox/dcim/svg/: racks.py
netbox/dcim/tables/: cables.py  devices.py  sites.py
netbox/dcim/tests/: test_filtersets.py  test_models.py  test_views.py
netbox/extras/: conditions.py  constants.py  events.py  jobs.py  lookups.py  views.py
netbox/extras/api/: views.py
netbox/extras/dashboard/: widgets.py
netbox/extras/forms/: bulk_import.py  scripts.py
netbox/extras/migrations/: 0129_fix_script_paths.py
netbox/extras/models/: mixins.py  models.py  notifications.py  tags.py
netbox/extras/tables/: tables.py
netbox/extras/tests/: test_conditions.py  test_views.py
netbox/ipam/: filtersets.py
netbox/ipam/api/: views.py
netbox/ipam/forms/: bulk_import.py  model_forms.py
netbox/netbox/: configuration_example.py  jobs.py  preferences.py  settings.py  urls.py
netbox/project-static/: package.json
netbox/utilities/: api.py  constants.py  data.py  query.py
netbox/virtualization/: views.py
netbox/wireless/: models.py
(+94 files in other folders)
