# See PEP 518 for the spec of this file
# https://www.python.org/dev/peps/pep-0518/

[project]
name = "netbox"
version = "4.3.5"
requires-python = ">=3.10"
authors = [
    { name = "NetBox Community" }
]
maintainers = [
    { name = "NetBox Community" }
]
description = "The premier source of truth powering network automation."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE.txt"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "django==5.2.4",
    "django-cors-headers==4.7.0",
    "django-debug-toolbar==5.2.0",
    "django-filter==25.1",
    "django-graphiql-debug-toolbar==0.2.0",
    "django-htmx==1.23.2",
    "django-mptt==0.17.0",
    "django-pglocks==1.0.4",
    "django-prometheus==2.4.1",
    "django-redis==6.0.0",
    "django-rich==2.0.0",
    "django-rq==3.0.1",
    "django-storages==1.14.6",
    "django-tables2==2.7.5",
    "django-taggit==6.1.0",
    "django-timezone-field==7.1",
    "djangorestframework==3.16.0",
    "drf-spectacular==0.28.0",
    "drf-spectacular-sidecar==2025.7.1",
    "feedparser==6.0.11",
    "gunicorn==23.0.0",
    "jinja2==3.1.6",
    "markdown==3.8.2",
    "mkdocs-material==9.6.16",
    "mkdocstrings[python]==0.30.0",
    "netaddr==1.3.0",
    "nh3==0.3.0",
    "pillow==11.3.0",
    "podman>=5.5.0",
    "podman-compose>=1.5.0",
    "psycopg2-binary==2.9.10",
    "pyyaml==6.0.2",
    "requests==2.32.4",
    "social-auth-app-django==5.5.1",
    "social-auth-core==4.7.0",
    "strawberry-graphql==0.278.0",
    "strawberry-graphql-django==0.65.1",
    "svgwrite==1.4.3",
    "tablib==3.8.0",
]


[project.urls]
Homepage = "https://netboxlabs.com/products/netbox/"
Documentation = "https://netboxlabs.com/docs/netbox/"
Source = "https://github.com/netbox-community/netbox"
Issues = "https://github.com/netbox-community/netbox/issues"

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
skip-string-normalization = true

[tool.isort]
profile = "black"

[tool.pylint]
max-line-length = 120

[tool.pyright]
include = ["netbox"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
]
reportMissingImports = true
reportMissingTypeStubs = false
